[package]
name = "rust-template-test"
version = "0.1.0"
authors = ["Subreme <71085002+subreme@users.noreply.github.com>"]
edition = "2018"
description = ""
repository = "https://github.com/subreme/rust-template-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
